apng (more soon) processing using ffmpeg
